<resources>

    <string name="app_name">Playlist Maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media_library" translatable="false">Медиатека</string>
    <string name="btn_settings" translatable="false">Настройки</string>


    <string name="settings" translatable="false">Настройки</string>
    <string name="dark_mode" translatable="false">Тёмная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="write_support" translatable="false">Написать в поддержку</string>

</resources>