<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/blue">

    <!-- Заголовок -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:layout_marginBottom="32dp" />

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/image_button_background"
        android:contentDescription="@string/search"
        android:src="@drawable/search"
        android:scaleType="centerCrop"/>

    <!--android:layout_margin="16dp"-->

    <ImageButton
        android:id="@+id/media_library"
        android:src="@drawable/media_library"
        android:contentDescription="@string/media_library"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_weight="1"
        android:background="@drawable/image_button_background"
        android:scaleType="centerCrop"/>

    <!--android:background="@null" -->
    <!--app:shapeAppearanceOverlay="@style/RoundedImageButtonShape"-->

    <ImageButton
        android:id="@+id/setting"
        android:src="@drawable/settings"
        android:contentDescription="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@drawable/image_button_background"
        android:scaleType="centerCrop"
        />

</LinearLayout>


